syntax = "proto2";

//import "IM.Basic.proto";
package com.proto.loadbalance;

message Regist_CommunicationService{
	 optional string server_ip = 1;
     optional int32  server_port = 2;
}
message Request_IP{
    optional string device_id = 1;
    optional int32 user_id = 2;
//    optional com.proto.basic.Device_Type device_type = 3;
}

message Request_IP_Ack{
    optional string ip = 1;
    optional int32 port = 2;
}

message Report_onliners {
    optional int32 onliners = 1;

}
